[gd_scene load_steps=13 format=2]

[ext_resource path="res://source/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://source/SelectSound.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/png/Crocodile.png" type="Texture" id=3]
[ext_resource path="res://assets/png/CrocodileArm.png" type="Texture" id=4]
[ext_resource path="res://assets/png/Sprite.png" type="Texture" id=5]
[ext_resource path="res://assets/BebasNeue.otf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/FocusStyle.tres" type="StyleBox" id=7]

[sub_resource type="DynamicFont" id=1]

size = 100
use_mipmaps = false
use_filter = false
font_data = ExtResource( 6 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 25
use_mipmaps = false
use_filter = false
font_data = ExtResource( 6 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=3]

size = 20
use_mipmaps = false
use_filter = false
font_data = ExtResource( 6 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Animation" id=4]

resource_name = "Close"
length = 0.3
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 20 ), Vector2( 0, -540 ) ]
}

[sub_resource type="Animation" id=5]

resource_name = "Open"
length = 0.3
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -540 ), Vector2( 0, 20 ), Vector2( 0, 0 ) ]
}

[node name="MainMenu" type="Container"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -960.0
margin_bottom = -540.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="SelectSound" parent="." index="0" instance=ExtResource( 2 )]

[node name="Background" type="Panel" parent="." index="1"]

self_modulate = Color( 1, 1, 1, 0.392157 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 960.0
margin_bottom = 540.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect", "Visibility" ]

[node name="Title" type="Container" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_rotation = 12.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Crocodile" type="TextureRect" parent="Title" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 617.0
margin_top = -67.0
margin_right = 867.0
margin_bottom = 203.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
stretch_mode = 0
_sections_unfolded = [ "Animation", "Offset", "Region", "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="CloseArm" type="TextureRect" parent="Title/Crocodile" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 73.0
margin_top = 138.0
margin_right = 233.0
margin_bottom = 210.0
rect_rotation = -15.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="FarArm" type="TextureRect" parent="Title/Crocodile" index="1"]

show_behind_parent = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 36.0
margin_top = 104.0
margin_right = 196.0
margin_bottom = 176.0
rect_rotation = 15.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="Mouth" type="TextureRect" parent="Title/Crocodile" index="2"]

self_modulate = Color( 0.394531, 0.126373, 0.126373, 1 )
show_behind_parent = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 83.0
margin_top = 47.0
margin_right = 183.0
margin_bottom = 147.0
rect_scale = Vector2( 0.75, 0.75 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 5 )
stretch_mode = 0

[node name="Label" type="Label" parent="Title" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 257.0
margin_top = 15.0
margin_right = 964.0
margin_bottom = 135.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
text = "Crocogator        Swim!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]
__meta__ = {
"_edit_group_": true
}

[node name="PlayButton" type="Button" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 30.0
margin_top = 280.0
margin_right = 380.0
margin_bottom = 406.0
rect_pivot_offset = Vector2( 0, 0 )
focus_neighbour_top = NodePath("../DurationButton")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = ExtResource( 7 )
custom_styles/focus = ExtResource( 7 )
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Play"
flat = true
align = 0
_sections_unfolded = [ "Mouse", "Visibility", "custom_fonts" ]

[node name="MapButton" type="Button" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 30.0
margin_top = 410.0
margin_right = 380.0
margin_bottom = 447.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = ExtResource( 7 )
custom_styles/focus = ExtResource( 7 )
custom_fonts/font = SubResource( 2 )
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
text = "Map: Rectangle - 6 Players"
flat = true
align = 0
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="DurationButton" type="Button" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 30.0
margin_top = 450.0
margin_right = 380.0
margin_bottom = 487.0
rect_pivot_offset = Vector2( 0, 0 )
focus_neighbour_bottom = NodePath("../PlayButton")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = ExtResource( 7 )
custom_styles/focus = ExtResource( 7 )
custom_fonts/font = SubResource( 2 )
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
text = "Duration: 3 Minutes"
flat = true
align = 0
_sections_unfolded = [ "Focus", "Rect", "custom_fonts" ]

[node name="Credits" type="Label" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 750.0
margin_top = 400.0
margin_right = 947.0
margin_bottom = 532.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
text = "Developer: Dlean Jeans
Concept Art: Das Billige Alien
Music: OurMusicBox.com
SFX: Zapslat.com
Game Engine: Godot 3"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="7"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.1
playback_speed = 1.0
anims/Close = SubResource( 4 )
anims/Open = SubResource( 5 )
blend_times = [  ]
autoplay = ""
_sections_unfolded = [ "Playback Options", "playback" ]

[connection signal="visibility_changed" from="." to="." method="_grab_focus_if_opened"]

[connection signal="pressed" from="PlayButton" to="SelectSound" method="play"]

[connection signal="pressed" from="PlayButton" to="." method="close"]

[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]

[connection signal="pressed" from="PlayButton" to="PlayButton" method="release_focus"]

[connection signal="pressed" from="MapButton" to="SelectSound" method="play"]

[connection signal="pressed" from="MapButton" to="." method="_on_MapButton_pressed"]

[connection signal="pressed" from="DurationButton" to="SelectSound" method="play"]

[connection signal="pressed" from="DurationButton" to="." method="_on_RoundDurationButton_pressed"]


